--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
+    "redux-promise": "^0.6.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
